--- a/painogen/privat/scss/style.scss
+++ b/painogen/privat/scss/style.scss
@@ -1,4 +1,3 @@
-
 @import 'settings';
 
 
@@ -50,6 +49,11 @@ body{
   -moz-transform: rotate(-135deg);
   -o-transform: rotate(-135deg);
   transform: rotate(-135deg);
+
+  @media only screen and (max-width: 1366px) {
+    font-size: 12px;
+     
+   }
 }
 
 
@@ -307,12 +311,14 @@ z-index: 99999;
   grid-column-gap: 3%;
   margin-top: 90px;
 
-/*
-  @media only screen and (max-width: 1200px){
-    max-width: 768px;
-    display: block;
-  }
 
+  @media only screen and (max-width: 1366px){
+      width: 856px;
+    
+    grid-template-columns: 453px 375px;
+  
+  }
+/*
   @media only screen and (max-width: 800px){
     max-width: 568px;
     display: block;
@@ -338,10 +344,13 @@ z-index: 99999;
     background-color: #ababab;
     top: 249px;
 
-   /* @media only screen and (max-width: 1440px) {
-      top: 244px;
-    }
+   @media only screen and (max-width: 1366px) {
     
+    width: 30px;
+    height: 57px;
+       top: 147px;
+    }
+    /*
   @media only screen and (max-width: 1200px){
       width: 31px;
       height: 55px;
@@ -384,7 +393,7 @@ z-index: 99999;
         background: #2c9146;
         cursor: pointer;
       }
-      /*@media only screen and (max-width: 1440px) {
+      /*@media only screen and (max-width: 1366px) {
         left:88.5%
       }
 
@@ -420,11 +429,11 @@ z-index: 99999;
         cursor: pointer;
       }
 
-     /* @media only screen and (max-width: 1440px) {
-        left:21.5%
+      @media only screen and (max-width: 1366px) {
+        left:23%
       }
 
-        
+      /*  
       @media only screen and (max-width: 1200px){
         left: 20.7%;
       }
@@ -452,12 +461,11 @@ z-index: 99999;
   @extend .grid;
   grid-template-columns: 22.35772357723577% 75.20325203252033%;
 
-  /*@media only screen and (max-width: 1200px) {
+  @media only screen and (max-width: 1366px) {
 
-    grid-template-columns: 13% 70%;
-    grid-column-gap: 2%;
+    grid-template-columns: 80px 350px;
   }
-*/
+
   
 }
 
@@ -476,12 +484,13 @@ z-index: 99999;
   display: grid;
   grid-template-columns: 130px 490px;
   grid-column-gap: 5%;
-/*
-  @media only screen and (max-width: 1440px) {
-    grid-template-columns: 120px 555px;
 
+  @media only screen and (max-width: 1366px) {
+    
+  grid-template-columns: 80px 350px;
+  
   }
-
+/*
   @media only screen and (max-width: 800px) {
     grid-template-columns: 120px 430px;
 
@@ -526,12 +535,12 @@ z-index: 99999;
   background-repeat: no-repeat;
   background-position: center center;
 
-  /*@media only screen and (max-width: 1440px) {
-    width: 120px;
-    height: 120px;
+  @media only screen and (max-width: 1366px) {
+    
+    height: 80px;
 
   }
-
+/*
   @media only screen and (max-width: 1200px) {
     width: 100px;
     height: 100px;
@@ -707,6 +716,11 @@ z-index: 99999;
 .style_1 {
   font-family: $font_1;
   font-size: 16px;
+  @media only screen and (max-width: 1366px) {
+    
+  font-size: 12px;
+
+  }
 }
 
 
@@ -773,13 +787,29 @@ z-index: 99999;
     p:nth-child(3){
       margin-top:7px;
       font-size: 18px;
+      @media only screen and (max-width: 1366px){
+        margin-top: 0;
+      }
+      @media only screen and (max-width: 1366px) {
+    
+        font-size: 12px;
+        margin-top: 0;
+        }
     }
 
     p:nth-child(4){
       margin-top:6px;
+
+      @media only screen and (max-width: 1366px) {
+    
+        
+           margin-top: -4px;
+        }
      .spanPrice {
        margin-left: 7%;
        margin-right: 7%;
+
+       
      }
     }
     
@@ -797,6 +827,16 @@ z-index: 99999;
         padding-top:5px;
         border: solid 1px #d0d0d0;
         margin-right: 2%;
+
+
+        @media only screen and (max-width: 1366px) {
+    
+        
+                width: 72px;
+                height: 25px;
+                padding-top: 3px;
+                font-size: 11px;
+       }
       }
     }
 
@@ -865,6 +905,9 @@ z-index: 99999;
 
 #sizesForm{
   margin-top: 8px;
+  @media only screen and (max-width: 1366px) {
+    margin-top: 3px;
+  }
 }
 
 
@@ -1024,18 +1067,21 @@ input#number {
 
 
 /*...... purchase ......*/
-@media only screen and (max-width: 1200px) {
+/*@media only screen and (max-width: 1366px) {
   #purchase_block {
     width: 70%;
   }
 
-}
+}*/
 
 
 #purchase_block {
   margin-top: 20px;
-}
+  @media only screen and (max-width: 1366px) {
+    margin-top: 10px;
+  }
 
+}
 .purchase_input  {
   padding-top:0;
   
@@ -1049,7 +1095,9 @@ input#number {
 #One-time_purchase,#Subscription_purchase {
   @extend .grid;
   grid-template-columns: 68% 43px;
-  
+  @media only screen and (max-width: 1366px) {
+    grid-template-columns: 62% 77px;
+  }
  
     
 }
@@ -1069,6 +1117,10 @@ input#number {
   }
 
   margin-left: 22%;
+
+  @media only screen and (max-width: 1366px) {
+    width: 56px;
+  }
  
 }
 
@@ -1086,6 +1138,8 @@ input#number {
   grid-template-columns: 124px 165px;
   grid-column-gap: 8%;
   margin-top: 11px;
+ 
+  
   button{
     background: #e8e8e8;
     border-color: #a8a8a8;
@@ -1104,6 +1158,7 @@ input#number {
      border-color: #8dd079;
      
     }
+
   }
 }
 
@@ -1122,7 +1177,7 @@ input#number {
     padding:0;
     margin:0;
   }
-  margin-top: 26px;
+  margin-top: 14px;
 
   button{
     @include fontsStyle($font_1, 12px,#a8a8a8);
@@ -1135,7 +1190,18 @@ input#number {
     background:#41b115;
     color: #ffffff;
     border-color: #8dd079;
+
+    @media only screen and (max-width: 1366px) {
+     width: 34%;
+    }
+
   }
+
+
+  @media only screen and (max-width: 1366px) {
+    margin-top:17px;
+  }
+
 }
 
 
@@ -1165,6 +1231,13 @@ input#number {
     -moz-transition: 0.3s ease-in-out;
     -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
+
+    
+  @media only screen and (max-width: 1366px) {
+    font-size: 15px;
+  }
+
+
     &:hover{
       color: #41b115;
     }
@@ -1182,7 +1255,7 @@ input#number {
   margin-top: 0px;
   p{
     @include fontsStyle($font_1,12px,#a8a8a8);
-    line-height: 8px;
+    line-height: 14px;
   }
 }
 
@@ -2089,4 +2162,5 @@ padding-top: 40px;
 
   }
 }
+
 
