--- a/painogen/privat/scss/style.scss
+++ b/painogen/privat/scss/style.scss
@@ -318,12 +318,15 @@ z-index: 99999;
     grid-template-columns: 453px 375px;
   
   }
-/*
-  @media only screen and (max-width: 800px){
-    max-width: 568px;
-    display: block;
-  }
 
+
+
+  @media only screen and (max-width: 992px){
+    grid-template-columns: 1fr;
+    width: 493px;
+
+  }
+/*
   @media only screen and (max-width: 600px){
     max-width: 300px;
     display: block;
@@ -467,6 +470,12 @@ z-index: 99999;
   }
 
   
+  @media only screen and (max-width: 992px) {
+
+    grid-template-columns: 90px 380px;
+  }
+
+  
 }
 
 .topSlider_header_link {
@@ -489,6 +498,13 @@ z-index: 99999;
     
   grid-template-columns: 80px 350px;
   
+  }
+
+
+  
+  @media only screen and (max-width: 992px) {
+
+    grid-template-columns: 90px 380px;
   }
 /*
   @media only screen and (max-width: 800px) {
@@ -538,6 +554,12 @@ z-index: 99999;
   @media only screen and (max-width: 1366px) {
     
     height: 80px;
+
+  }
+
+  @media only screen and (max-width: 992px) {
+    
+    height: 90px;
 
   }
 /*
